# MLClassAssignment

./: .gitignore  AGENT.md  README.md  pyproject.toml
1_digit/: TASK.md  dataset_utils.py  pytorch_model.py  train_pytorch.py
1_digit/models/: pytorch_model.pth
1_digit/reports/: REPORT_PYTORCH.md  report.md
2_medimage/: IMPROVEMENTS.md  README.md  TASK.md  dataset_utils.py  evaluation.py  fundus_classification.py  model.py  train.py
3_saliency/: README.md  TASK.md  dataset_utils.py  metric.py  metrics.py  model.py  predict.py  saliency_end.py  train.py
4_CIFAR10/: README.md  TASK.md  train_dcgan.py  train_diffusion.py
