[project]
name = "mlclassassignment"
version = "0.1.0"
description = "BUAA Machine Learning Course Assignment Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pillow>=10.0",
    "scikit-learn>=1.4",
    "tqdm",
    "torch",
    "torchvision",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "torch-fidelity>=0.3.0",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


